# MNIST_COok

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
configs/: config.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
src/mnist_cooky/: evaluate.py  train.py  visualize.py
tests/: test_data.py
