[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist_cooky"
version = "0.0.1"
description = "Training project for DTU\u0027s MLOPs course"
authors = [
  { name = "Jacob", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
lint.select = ["I"]
line-length = 120

[project.scripts]
train = "mnist_cooky.train:train"
evaluate = "mnist_cooky.evaluate:app"

[tool.coverage.run]
omit = ["tests/*"]
